--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,10 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
+    /* Custom red */
+
+    --main-red: 353, 95%, 40%;
   }
 
   .dark {
@@ -65,5 +69,13 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+
+  .iconHover {
+    @apply hover:bg-gray-100  box-content p-2 rounded-full;
+  }
+
+  .newClass{
+    background-color: #00000000;
   }
 }
